<resources>
    <string name="app_name">FLAAM</string>
    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Flaam’s Minimalist Interface.</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="login_description_text">Enter your Username and Password,\nto Login with us.</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="register_description_text">Enter your Username, First Name, Last Name,\nEmail Address and Password, to Register with us.</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ipsum tellus, cursus eget sem nec, sagittis placerat felis. Quisque eu congue nisl, ut sodales risus. Donec fringilla rutrum odio, et eleifend dolor mollis eget.</string>
    <string name="view_more">view more …</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="votes">Votes</string>
    <string name="implementations">Implementations</string>
    <string name="post_idea">POST IDEA</string>
    <string name="add_title">Add Title</string>
    <string name="add_description">Add Description…</string>
    <string name="search_ideas_to_implement">Search Ideas to Implement</string>
    <string name="update">UPDATE</string>
    <string name="date_joined">Date Joined : </string>
    <string name="add_overview_description">Add Overview / Description.....</string>
    <string name="repository_link">Repository Link</string>
    <string name="add_implementation">Add Implementation</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_tag">Add Tag</string>
    <string name="create_tag">CREATE TAG</string>
    <string name="cancel_tag">CANCEL TAG</string>
    <string name="edit_profile_toolbar_title">EDIT PROFILE</string>
    <string name="tags">Tags</string>
    <string name="no_user_favourite_tags_to_display">No Favourite Tags To Display!</string>
    <string name="add_tags">Add Tags</string>
    <string name="add_body">Add Body</string>
    <string name="no_user_ideas_added">You haven\'t added any Ideas yet!</string>
    <string name="sample_text_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ipsum tellus, cursus eget sem nec, sagittis placerat felis. Quisque eu congue nisl, ut sodales risus. Donec fringilla rutrum odio, et eleifend dolor mollis eget.
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ipsum tellus, cursus eget sem nec, sagittis placerat felis. Quisque eu congue nisl, ut sodales risus. Donec fringilla rutrum odio, et eleifend dolor mollis eget.</string>
    <string name="no_user_bookmarks_added">You haven\'t added any Bookmarks Yet!</string>
    <string name="no_implementations_projects_added">There are No Implementations / Projects added for this Idea!</string>
    <string name="favourite_tags">Favourite Tags</string>
    <string name="full_name">%s %s</string>
    <string name="date_joined_days_ago">%s days ago</string>
    <string name="loading">Loading......</string>
    <string name="you_ve_reached_the_end">You\'ve Reached The End!</string>
    <string name="plus_number_of_tags">+%s</string>
    <string name="joined">"Joined - "</string>
    <string name="add_a_milestone">Add a Milestone</string>
    <string name="add_milestones">Add Milestones</string>
    <string name="add">Add</string>
    <string name="add_milestone">Add Milestone</string>
    <string name="forgot_password">forgot password?</string>
    <string name="edit_idea">EDIT IDEA</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="upvote_count">Upvote Count</string>
    <string name="sort_by">Sort By</string>
    <string name="latest">Latest</string>
    <string name="all">All</string>
    <string name="add_link_icon">Add Link Icon</string>
    <string name="close_icon">Close Icon</string>
    <string name="milestones_icon">Milestones Icon</string>
    <string name="filter_icon">Filter Icon</string>
    <string name="search_icon">Search Icon</string>
    <string name="flaam_image">Flaam Image</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="submit">Submit</string>
    <string name="get_reset_password_link">Get Reset Password Link!</string>
    <string name="share_icon">Share Icon</string>
    <string name="bookmark_icon">Bookmark Icon</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="milestone_list_icon">Milestone List Icon</string>
    <string name="delete_milestone_icon">Delete Milestone Icon</string>
    <string name="upvote_icon">Upvote Icon</string>
    <string name="downvote_icon">Downvote Icon</string>
    <string name="github_icon">GitHub Icon</string>
    <string name="add_implementation_icon">Add Implementation Icon</string>
    <string name="add_comment">Add Comment</string>
    <string name="add_discussion">ADD DISCUSSION</string>
    <string name="cancel_discussion">CANCEL DISCUSSION</string>
    <string name="post">Post</string>
    <string name="no_discussions_added_for_this_idea">No Discussions Added for this Idea!!</string>
    <string name="no_user_implementations_added">You haven\'t added any Implementations Yet!</string>
    <string name="load_comments">Load Comments</string>
    <string name="edit_implementation">EDIT IMPLEMENTATION</string>
    <string name="user_email_hidden">Email Hidden</string>
    <string name="flaam_icon_with_text">FLAAM Icon with Text</string>
</resources>