<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_add_title_edit_implementation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@color/shimmer_placeholder"
        android:hint="@string/add_title" />


    <EditText
        android:id="@+id/et_add_overview_description_edit_implementation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@color/shimmer_placeholder"
        android:hint="@string/add_overview_description" />

    <EditText
        android:id="@+id/et_add_body_edit_implementation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@color/shimmer_placeholder"
        android:hint="@string/add_body" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/iv_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/add_link_icon"
            android:src="@drawable/ic_insert_link_24dp" />


        <EditText
            android:id="@+id/et_github_repo_link_edit_implementation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@color/shimmer_placeholder"
            android:hint="@string/repository_link" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="6dp"
            android:background="@color/shimmer_placeholder" />

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="6dp"
            android:background="@color/shimmer_placeholder" />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_edit_implementation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_button_rounded_gradient2"
        android:text="@string/edit_implementation"
        android:textColor="@color/primaryTextColor" />

</LinearLayout>
