<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/box_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_edit_idea_user_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/border_profile_picture"
            android:src="@color/shimmer_placeholder" />

        <EditText
            android:id="@+id/et_edit_idea_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="@color/shimmer_placeholder"
            android:hint="@string/add_title"
            android:textSize="32sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_edit_idea_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_edit_idea_add_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_tag"
                android:textColor="@color/secondaryDarkColor"
                app:chipBackgroundColor="@color/primaryColor"
                app:chipIcon="@drawable/ic_add_24dp"
                app:chipIconTint="@color/secondaryDarkColor" />

        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>


    <EditText
        android:id="@+id/et_edit_idea_description"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="15dp"
        android:background="@color/shimmer_placeholder"
        android:hint="@string/add_description" />

    <EditText
        android:id="@+id/et_edit_idea_body"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="12dp"
        android:background="@color/shimmer_placeholder"
        android:hint="@string/add_body" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:contentDescription="@string/milestones_icon"
            android:src="@drawable/ic_target_color_24dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="8"
            android:background="@color/shimmer_placeholder"
            app:boxBackgroundColor="@color/shimmer_placeholder">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_add_milestone_edit_idea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/add_milestone" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_add_milestone_edit_idea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:backgroundTint="@color/primaryColor"
            android:text="@string/add"
            android:textColor="@color/secondaryDarkColor" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">


        <View
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="4dp"
            android:background="@color/shimmer_placeholder" />


        <View
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_margin="4dp"
            android:background="@color/shimmer_placeholder" />

    </LinearLayout>


</LinearLayout>
