<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_user_image_post_description"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/border_profile_picture"
            android:src="@color/shimmer_placeholder" />

        <TextView
            android:id="@+id/tv_title_post_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="8"
            android:background="@color/shimmer_placeholder"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_bookmark_post_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/bookmark_icon"
            android:src="@drawable/ic_bookmark_uncheck"
            app:tint="@color/black" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_upvote_idea_post_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/upvote_icon"
                android:src="@drawable/ic_upvote_outline_24dp"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/tv_upvote_downvote_post_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/shimmer_placeholder"
                android:gravity="center_vertical"
                android:text="45"
                android:textColor="@color/shimmer_placeholder"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/iv_downvote_idea_post_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/downvote_icon"
                android:src="@drawable/ic_downvote_outline_24dp"
                app:tint="@color/black" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_tags_post_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:chipSpacingHorizontal="5dp" />

            <TextView
                android:id="@+id/tv_body_post_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/shimmer_placeholder"
                android:text="@string/sample_text_2"
                android:textColor="@color/shimmer_placeholder" />

        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp">

        <ImageView
            android:id="@+id/iv_add_implementation_post_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/add_implementation_icon"
            android:src="@drawable/ic_add_implementation"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/iv_share_post_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/share_icon"
            android:src="@drawable/ic_share_24dp"
            app:tint="@color/black" />

    </RelativeLayout>


</LinearLayout>