<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="8dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:id="@+id/ll_add_discussion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_add_discussion_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/transparent"
            app:boxBackgroundColor="@android:color/transparent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_add_discussion_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_title"
                android:textColor="@color/secondaryColor"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_add_discussion_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/transparent"
            app:boxBackgroundColor="@android:color/transparent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_add_discussion_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_body"
                android:textColor="@color/secondaryColor"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_add_discussion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/add_discussion"
                android:textColor="@color/secondaryDarkColor"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_cancel_discussion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/cancel_discussion"
                android:textColor="@color/secondaryDarkColor"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>